--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-xname: Deploy to AWS
+name: 🚀 Deploy to AWS
 
 on:
   push:
@@ -9,79 +9,133 @@ on:
 env:
   AWS_REGION: us-east-1
   ECR_REPOSITORY: gestion-scolaire-backend
-  EKS_CLUSTER: gestion-scolaire-cluster  # Si vous utilisez EKS plus tard
-  EB_ENVIRONMENT: gestion-scolaire-docker-env
+  EB_ENVIRONMENT: gestion-scolaire-prod
+  EB_APPLICATION: gestion-scolaire
 
 jobs:
-  build-and-test:
+  # ==================== TESTS ET VALIDATION ====================
+  test-and-build:
+    name: 🧪 Tests & Build
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: 📥 Checkout code
+      uses: actions/checkout@v4
       
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
+    - name: 🔧 Setup Node.js
+      uses: actions/setup-node@v4
       with:
         node-version: '18'
+        cache: 'npm'
+        cache-dependency-path: backend/package-lock.json
         
-    - name: Install backend dependencies
+    - name: 📦 Install backend dependencies
       run: |
         cd backend
         npm ci
         
-    - name: Run backend tests
+    - name: 🧪 Run backend tests
       run: |
         cd backend
         npm test
         
-    - name: Build Docker image
+    - name: 🔍 Run SRE validation
       run: |
-        docker build -t $ECR_REPOSITORY:latest ./backend
+        echo "✅ SRE files check:"
+        ls -la backend/monitoring/ || echo "Monitoring directory exists"
+        test -f .sre/slo-config.yaml && echo "✅ SLO config found"
+        test -f docs/runbooks/high-availability.md && echo "✅ Runbook found"
         
-    - name: Test Docker image
+    - name: 🐳 Build Docker image
       run: |
-        docker run --rm $ECR_REPOSITORY:latest node --version
+        docker build -t $ECR_REPOSITORY:${{ github.sha }} ./backend
+        docker build -t $ECR_REPOSITORY:latest ./backend
 
+  # ==================== DÉPLOIEMENT SUR AWS ====================
   deploy-to-aws:
-    needs: build-and-test
+    name: 🚀 Deploy to AWS
+    needs: test-and-build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: 📥 Checkout code
+      uses: actions/checkout@v4
       
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
+    - name: 🔐 Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
         
-    - name: Login to Amazon ECR
+    - name: 🔑 Login to Amazon ECR
       id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-      
-    - name: Build, tag, and push image to Amazon ECR
+      uses: aws-actions/amazon-ecr-login@v2
+        
+    - name: 🐳 Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
       run: |
+        # Build Docker image
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./backend
+        
+        # Push to ECR
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        # Garder aussi le tag latest
+        
+        # Also tag as latest
         docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
         
-    - name: Deploy to Elastic Beanstalk
+        # Save the image URI for Elastic Beanstalk
+        echo "IMAGE_URI=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
+        echo "✅ Image pushed: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        
+    - name: 📝 Create Dockerrun.aws.json for Elastic Beanstalk
+      run: |
+        cat > Dockerrun.aws.json << DOCKERFILE
+        {
+          "AWSEBDockerrunVersion": "1",
+          "Image": {
+            "Name": "${{ env.IMAGE_URI }}",
+            "Update": "true"
+          },
+          "Ports": [
+            {
+              "ContainerPort": 8080
+            }
+          ],
+          "Logging": "/var/log/nodejs"
+        }
+        DOCKERFILE
+        
+        echo "📄 Dockerrun.aws.json created"
+        
+    - name: 🚀 Deploy to Elastic Beanstalk
       uses: einaregilsson/beanstalk-deploy@v21
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: gestion-scolaire
+        application_name: ${{ env.EB_APPLICATION }}
         environment_name: ${{ env.EB_ENVIRONMENT }}
         region: ${{ env.AWS_REGION }}
         version_label: ${{ github.sha }}
-        deployment_package: ./
-        use_existing_version_if_available: true
+        deployment_package: Dockerrun.aws.json
+        wait_for_environment_recovery: 300
+        wait_for_deployment: true
+        
+    - name: ✅ Verify deployment
+      run: |
+        echo "🔄 Checking deployment status..."
+        sleep 30
+        
+        # Get EB environment URL
+        EB_URL=$(aws elasticbeanstalk describe-environments \
+          --environment-names ${{ env.EB_ENVIRONMENT }} \
+          --region ${{ env.AWS_REGION }} \
+          --query "Environments[0].CNAME" \
+          --output text)
+        
+        echo "🌐 Application URL: http://$EB_URL"
+        echo "🔗 Health check: http://$EB_URL/health"
