--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,55 @@
 {
   "name": "gestion-scolaire-backend",
   "version": "1.0.0",
-  "description": "Backend pour la gestion scolaire Sénégal",
+  "description": "Backend API pour l'application de gestion scolaire",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest --testPathPattern=test --passWithNoTests",
+    "test:ci": "jest --ci --testPathPattern=test",
+    "test:watch": "jest --watch",
+    "lint": "eslint .",
+    "health": "node -e \"require('http').get('http://localhost:8080/health', r => process.exit(r.statusCode === 200 ? 0 : 1))\"",
+    "docker:build": "docker build -t gestion-scolaire-backend .",
+    "docker:run": "docker run -p 8080:8080 gestion-scolaire-backend"
   },
+  "keywords": [
+    "nodejs",
+    "express",
+    "mongodb",
+    "api",
+    "gestion-scolaire"
+  ],
+  "author": "MHD",
+  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "csv-parser": "^3.2.0",
-    "dotenv": "^16.3.1",
+    "diskusage": "^1.1.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0",
-    "multer": "^2.0.2",
-    "xlsx": "^0.18.5"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.0",
+    "prom-client": "^14.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "jest": "^29.7.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.4"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "testMatch": [
+      "**/test/**/*.test.js"
+    ],
+    "verbose": true
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
