--- a/backend/package.json
+++ b/backend/package.json
@@ -8,48 +8,30 @@
     "dev": "nodemon server.js",
     "test": "jest --testPathPattern=test --passWithNoTests",
     "test:ci": "jest --ci --testPathPattern=test",
-    "test:watch": "jest --watch",
-    "lint": "eslint .",
-    "health": "node -e \"require('http').get('http://localhost:8080/health', r => process.exit(r.statusCode === 200 ? 0 : 1))\"",
-    "docker:build": "docker build -t gestion-scolaire-backend .",
-    "docker:run": "docker run -p 8080:8080 gestion-scolaire-backend"
+    "test:watch": "jest --watch"
   },
-  "keywords": [
-    "nodejs",
-    "express",
-    "mongodb",
-    "api",
-    "gestion-scolaire"
-  ],
+  "keywords": ["nodejs", "express", "mongodb", "api", "gestion-scolaire"],
   "author": "MHD",
   "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "diskusage": "^1.1.3",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0",
-    "prom-client": "^14.0.1"
+    "express": "4.18.2",
+    "mongoose": "7.0.0",
+    "dotenv": "16.0.3",
+    "cors": "2.8.5",
+    "jsonwebtoken": "9.0.0",
+    "bcryptjs": "2.4.3",
+    "prom-client": "14.0.1",
+    "diskusage": "1.1.3"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^2.0.22",
-    "supertest": "^6.3.4"
+    "jest": "29.0.0",
+    "supertest": "6.3.0",
+    "nodemon": "2.0.22"
   },
   "jest": {
     "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "testMatch": [
-      "**/test/**/*.test.js"
-    ],
+    "coveragePathIgnorePatterns": ["/node_modules/"],
+    "testMatch": ["**/test/**/*.test.js"],
     "verbose": true
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
   }
 }
