--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,12 +25,9 @@ jobs:
       with:
         node-version: '18'
         
-    - name: 📦 Install backend dependencies (using npm install)
+    - name: 📦 Install backend dependencies
       run: |
         cd backend
-        # Supprimer l'ancien lock file s'il existe
-        rm -f package-lock.json 2>/dev/null || true
-        # Installer les dépendances
         npm install
         
     - name: 🧪 Run tests
@@ -61,6 +58,26 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
         
+    - name: 🔧 Create ECR repository if it doesn't exist
+      id: create-ecr
+      run: |
+        # Vérifier si le repository existe déjà
+        if aws ecr describe-repositories \
+          --repository-names ${{ env.ECR_REPOSITORY }} \
+          --region ${{ env.AWS_REGION }} 2>/dev/null; then
+          echo "✅ Repository ECR existe déjà"
+          echo "repository_exists=true" >> $GITHUB_OUTPUT
+        else
+          echo "🔧 Création du repository ECR..."
+          aws ecr create-repository \
+            --repository-name ${{ env.ECR_REPOSITORY }} \
+            --region ${{ env.AWS_REGION }} \
+            --image-scanning-configuration scanOnPush=true \
+            --image-tag-mutability MUTABLE
+          echo "✅ Repository ECR créé"
+          echo "repository_exists=false" >> $GITHUB_OUTPUT
+        fi
+        
     - name: 🔑 Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
@@ -74,6 +91,7 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./backend
         
         # Push to ECR
+        echo "🚀 Pushing image to ECR..."
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         
         # Also tag as latest
@@ -85,9 +103,6 @@ jobs:
         
     - name: 📝 Create Dockerrun.aws.json for Elastic Beanstalk
       run: |
-        # Get the ECR image URI from env
-        ECR_URI=$(echo "${{ env.IMAGE_URI }}" | sed 's/:latest$//')
-        
         cat > Dockerrun.aws.json << DOCKERFILE
         {
           "AWSEBDockerrunVersion": "1",
@@ -119,7 +134,9 @@ jobs:
         
     - name: ✅ Verify deployment
       run: |
-        echo "✅ Deployment initiated!"
-        echo "🌐 Check AWS Console: https://us-east-1.console.aws.amazon.com/elasticbeanstalk"
+        echo "✅ Deployment completed!"
         echo ""
-        echo "⏱️  Deployment takes 5-10 minutes to complete."
+        echo "📋 Next steps:"
+        echo "1. Check EB environment: https://us-east-1.console.aws.amazon.com/elasticbeanstalk"
+        echo "2. Set environment variables in EB console"
+        echo "3. Test your application URL"
